# lol-overlay

./: .env.example  .env.local.example  .gitignore  .taplo.toml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  biome.json  design-qa.md  framework.tldraw  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  todo.md  vite.config.ts  vitest.config.ts
.github/workflows/: checks.yml  release.yml  warm-release-cache.yml
apps/mobile/: .env.example  app.json  package.json  tsconfig.json
apps/mobile/src/: App.tsx  GameScreen.tsx  PairingScreen.tsx  useRelay.ts
apps/relay/: package.json  tsconfig.json  wrangler.jsonc
apps/relay/src/: app.tsx  durable-objects.ts  index.ts  shared.ts  types.ts
apps/relay/test/: app.test.ts  durable-objects.test.ts
crates/ddragon/: Cargo.toml
crates/ddragon/src/: lib.rs
crates/lcu/: Cargo.toml
crates/lcu/src/: error.rs  lib.rs  parse.rs  rest.rs  ws.rs
crates/live-client/: Cargo.toml
crates/live-client/src/: lib.rs
crates/provider/: Cargo.toml
crates/provider-deeplol/: Cargo.toml
crates/provider-deeplol/fixtures/: player_champion_stats_raw_sample.json
crates/provider-deeplol/src/: lib.rs  player.rs  runes.rs  tests.rs  types.rs
crates/provider-lolalytics/: Cargo.toml
crates/provider-lolalytics/src/: api.rs  lib.rs  tests.rs  types.rs
crates/provider-lolps/: Cargo.toml
crates/provider-lolps/src/: api.rs  lib.rs  tests.rs  types.rs
crates/provider-opgg/: Cargo.toml
crates/provider-opgg/src/: api.rs  flight.rs  lib.rs  player.rs  tests.rs  types.rs
crates/provider-ugg/: Cargo.toml
crates/provider-ugg/src/: api.rs  lib.rs  tier_list.rs
crates/provider-ugg/src/types/: arena_overview.rs  default_overview.rs  mappings.rs  matchups.rs  mod.rs  overview.rs
crates/provider/src/: build_proxy.rs  error.rs  hardcoded.rs  http.rs  lib.rs  player_proxy.rs  player_trait.rs  proxy.rs  router.rs  shared.rs  threat.rs  trait_def.rs
crates/types/: Cargo.toml
crates/types/src/: champ_select.rs  lcu.rs  lib.rs  player.rs  recommendation.rs  snapshot.rs
docs/: adr-player-provider-boundaries.md  data-provider-policy.md  lolps-windows-lcu-acceptance.md  player-live-acceptance.md  player-provider-api.md  player-stats-review.md  player-windows-lcu-acceptance.md  provider-data-contract.md  provider-status.html  refactor-plan.md  solid-tailwind-migration-plan.md  ugg-chrome-api-investigation.md  ui-preview.html
e2e/: player-stats.spec.ts
src/: App.tsx  app.css  assets.test.ts  assets.ts  champselect.ts  index.tsx  main.ts  styles.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  engine.rs  error.rs  events.rs  hittest.rs  hotkeys.rs  lcu.rs  lib.rs  live_client.rs  main.rs  mobile.rs  mock.rs
src-tauri/src/provider/: deeplol.rs  hardcoded.rs  mod.rs
src-tauri/tests/: tier_list_fallback.rs
src/components/: DebugPanel.tsx  Icon.tsx  LpBanner.tsx  MobilePairing.tsx  RuneBanner.tsx  ScrollArea.tsx  SettingsPanel.tsx  StatusChip.tsx
src/components/desktop/: DesktopShell.tsx  DraftPage.tsx  Pages.tsx  SummonerPage.tsx
src/components/dev/: DevPlayground.tsx
src/components/hexgate/: BuildArea.tsx  Counters.tsx  EnemyRow.tsx  HexgatePanel.tsx  ImportButton.tsx  Matchup.tsx  RoleChips.tsx  SectionError.tsx  StatsRow.tsx  Tabs.tsx  TierLists.tsx
src/components/ingame/: InGamePanel.tsx  LiveDashboard.tsx  RecommendedItems.tsx  SkillOrder.tsx  ThreatChips.tsx
src/components/openlol/: BuildArea.tsx  Counters.tsx  EnemyRow.tsx  ImportButton.tsx  ItemPath.tsx  Matchup.tsx  OpenLolPanel.tsx  RoleChips.tsx  SectionError.tsx  SkillMatrix.tsx  StatsRow.tsx  Tabs.tsx  TierLists.tsx
src/lib/: championSearch.test.ts  championSearch.ts  draftRetention.test.ts  draftRetention.ts  drag.ts  hexgate.ts  hitRegions.ts  navigation.test.ts  navigation.ts  openlol.test.ts  openlol.ts  playerSearch.test.ts  playerSearch.ts  recentForm.test.ts  recentForm.ts  updater.ts
src/state/: backend.ts  caches.ts  debug.ts  layout.ts  mobile.ts  playerSettings.test.ts  playerSettings.ts  playerStats.test.ts  playerStats.ts  settings.ts
