[workspace]
resolver = "2"
members = ["src-tauri", "crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["time", "sync"] }
# native-tls on purpose — see invariant 4.
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
irelia = { version = "0.11", features = ["ws"] }
# internal crates (uncomment as phases land)
overlay-types = { path = "crates/types" }
overlay-ddragon = { path = "crates/ddragon" }
overlay-lcu = { path = "crates/lcu" }
overlay-live-client = { path = "crates/live-client" }
overlay-provider = { path = "crates/provider" }
overlay-provider-deeplol = { path = "crates/provider-deeplol" }
overlay-provider-ugg = { path = "crates/provider-ugg" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
module_name_repetitions = "allow"
