[workspace]
resolver = "2"
members = ["src-tauri", "crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
parking_lot = "0.12"
tokio = { version = "1", features = ["time", "sync"] }
# native-tls on purpose — see invariant 4.
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "native-tls",
] }
irelia = { version = "0.11", features = ["ws"] }
# internal crates (uncomment as phases land)
overlay-types = { path = "crates/types" }
overlay-ddragon = { path = "crates/ddragon" }
overlay-lcu = { path = "crates/lcu" }
overlay-live-client = { path = "crates/live-client" }
overlay-provider = { path = "crates/provider" }
overlay-provider-deeplol = { path = "crates/provider-deeplol" }
overlay-provider-ugg = { path = "crates/provider-ugg" }
overlay-provider-lolalytics = { path = "crates/provider-lolalytics" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
doc_markdown = "allow"
float_cmp = "allow"
ignore_without_reason = "allow"
items_after_test_module = "allow"
map_unwrap_or = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_raw_string_hashes = "allow"
needless_pass_by_value = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_many_lines = "allow"
unnecessary_wraps = "allow"
useless_vec = "allow"
