[package]
name = "lol-overlay"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lol_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
# Global hotkeys: toggle overlay interactivity / cycle monitor.
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# LCU REST + WebSocket client (lockfile auto-discovery, champ-select events).
irelia = { version = "0.11", features = ["ws"] }
# HTTP client for the Live Client Data API (in-game polling; no WebSocket exists
# for it). Self-signed cert on localhost, so we accept invalid certs per-client.
# native-tls (OS TLS) is used on purpose: Riot's Live Client server closes the
# socket without a TLS close_notify, which rustls treats as a hard error.
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
tokio = { version = "1", features = ["time", "sync"] }
async-trait = "0.1"
thiserror = "2"

