[package]
name = "lol-overlay"
version = "0.1.0"
description = "League of Legends overlay for champion-select and in-game recommendations"
authors = ["voq"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lol_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
# Global hotkeys: toggle overlay interactivity / cycle monitor.
tauri-plugin-global-shortcut = "2"
# Auto-update from GitHub Releases (latest.json) + relaunch after install.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { workspace = true }
serde_json = { workspace = true }
overlay-lcu = { workspace = true }
overlay-live-client = { workspace = true }
# HTTP client for the Live Client Data API (in-game polling; no WebSocket exists
# for it). Self-signed cert on localhost, so we accept invalid certs per-client.
# native-tls (OS TLS) is used on purpose: Riot's Live Client server closes the
# socket without a TLS close_notify, which rustls treats as a hard error.
reqwest = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
overlay-types = { workspace = true }
overlay-provider = { workspace = true }
overlay-provider-deeplol = { workspace = true }
overlay-provider-ugg = { workspace = true }
overlay-ddragon = { workspace = true }


[lints]
workspace = true
