[package]
name = "overlay-live-client"
version.workspace = true
edition.workspace = true

[dependencies]
overlay-types = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
