[package]
name = "overlay-provider-deeplol"
version.workspace = true
edition.workspace = true

[dependencies]
overlay-provider = { workspace = true }
overlay-types = { workspace = true }
overlay-ddragon = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
