[package]
name = "overlay-provider-opgg"
version.workspace = true
edition.workspace = true

[dependencies]
overlay-provider = { workspace = true }
overlay-types = { workspace = true }
overlay-ddragon = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
